Fixed such off center

--- a/public/stylesheets/very.css
+++ b/public/stylesheets/very.css
@@ -174,7 +174,7 @@ body {
 #main {
 	position: absolute;
 	top: 40.5%;
-	left: 12%;
+	left: 9%;
 }
 
 #youare {
